Удалены неиспользуемые ассеты, добавлены новые. Запущена очистка кода.

--- a/NonResidentialFund/NonResidentialFund.Client/Views/AuctionWindow.axaml
+++ b/NonResidentialFund/NonResidentialFund.Client/Views/AuctionWindow.axaml
@@ -7,6 +7,7 @@
         xmlns:vm="using:NonResidentialFund.Client.ViewModels"
         Title="Редактирование аукциона"
         MaxWidth="500"
+		Icon="/Assets/court.png"
         SizeToContent="Height">
 	<Design.DataContext>
 		<vm:AuctionViewModel/>
