--- a/NonResidentialFund/NonResidentialFund.Client/Views/BuildingWindow.axaml
+++ b/NonResidentialFund/NonResidentialFund.Client/Views/BuildingWindow.axaml
@@ -7,7 +7,8 @@
         xmlns:vm="using:NonResidentialFund.Client.ViewModels"
         Title="Редактирование здания"
         MaxWidth="500"
-        SizeToContent="Height">
+        SizeToContent="Height"
+		Icon="/Assets/building.png">
 	<Design.DataContext>
 		<vm:BuildingViewModel/>
 	</Design.DataContext>
