--- a/NonResidentialFund/NonResidentialFund.Client/Views/OrganizationWindow.axaml
+++ b/NonResidentialFund/NonResidentialFund.Client/Views/OrganizationWindow.axaml
@@ -7,7 +7,8 @@
         xmlns:vm="using:NonResidentialFund.Client.ViewModels"
         Title="Редактирование организации"
         MaxWidth="500"
-        SizeToContent="Height">
+        SizeToContent="Height"
+		Icon="/Assets/organization.png">
 	<Design.DataContext>
 		<vm:OrganizationViewModel/>
 	</Design.DataContext>
