--- a/NonResidentialFund/NonResidentialFund.Client/Views/PrivatizedWindow.axaml
+++ b/NonResidentialFund/NonResidentialFund.Client/Views/PrivatizedWindow.axaml
@@ -7,7 +7,8 @@
         xmlns:vm="using:NonResidentialFund.Client.ViewModels"
         Title="Редактирование приватизированного здания"
         MaxWidth="500"
-        SizeToContent="Height">
+        SizeToContent="Height"
+		Icon="/Assets/privatized.png">
 	<Design.DataContext>
 		<vm:PrivatizedViewModel/>
 	</Design.DataContext>
