--- a/Organization/Organization.Client/Views/EmployeeVacationVoucherWindow.axaml
+++ b/Organization/Organization.Client/Views/EmployeeVacationVoucherWindow.axaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Organization.Client.Views.EmployeeVacationVoucherWindow"
-		Title="EmployeeVacationVoucherWindow"
+		Title="Add/Edit employee's vacation voucher"
 		SizeToContent="Height"
 		MaxWidth="600"
 		WindowStartupLocation="CenterOwner"
