--- a/Organization/Organization.Client/Views/EmployeeOccupationWindow.axaml
+++ b/Organization/Organization.Client/Views/EmployeeOccupationWindow.axaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
 		mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Organization.Client.Views.EmployeeOccupationWindow"
-        Title="EmployeeOccupationWindow"
+        Title="Add/Edit employee's occupation"
 		SizeToContent="Height"
 		MaxWidth="600"
 		WindowStartupLocation="CenterOwner"
