--- a/Organization/Organization.Client/Views/VacationVoucherWindow.axaml
+++ b/Organization/Organization.Client/Views/VacationVoucherWindow.axaml
@@ -4,7 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Organization.Client.Views.VacationVoucherWindow"
-        Title="VacationVoucherWindow"
+        Title="Add/Edit vacation voucher"
 	    SizeToContent="Height"
 	    MaxWidth="500"
 		WindowStartupLocation="CenterOwner"
