created group and pharmacy ViewModel, View update ApiWrapper and App

--- a/PharmacyCityNetwork/PharmacyCityNetwork.Client/Views/PharmacyWindow.axaml
+++ b/PharmacyCityNetwork/PharmacyCityNetwork.Client/Views/PharmacyWindow.axaml
@@ -3,31 +3,33 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="600"
-        x:Class="PharmacyCityNetwork.Client.Views.ProductWindow"
+        x:Class="PharmacyCityNetwork.Client.Views.PharmacyWindow"
 		xmlns:vm="using:PharmacyCityNetwork.Client.ViewModels"
-        Title="Add product"
+        Title="Add pharmacy"
 		MaxWidth="500"
 		MaxHeight="500"
 		SizeToContent="Height">
 	<Design.DataContext>
-		<vm:ProductViewModel/>
+		<vm:PharmacyViewModel/>
 	</Design.DataContext>
-	
+
 	<Window.Styles>
 		<StyleInclude Source="/PharmacyCityNetworkStyles.axaml"/>
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,*" ColumnDefinitions="Auto,*">
-		<Label Grid.Row="0" Grid.Column="0">ProductName</Label>
-		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding ProductName}"/>
-		<Label Grid.Row="1" Grid.Column="0">Id</Label>
+	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,Auto,*" ColumnDefinitions="Auto,*">
+		<Label Grid.Row="0" Grid.Column="0">Pharmacy name</Label>
+		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding PharmacyName}"/>
+		<Label Grid.Row="1" Grid.Column="0">Pharmacy id</Label>
 		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding Id}"/>
-		<Label Grid.Row="2" Grid.Column="0">GroupId</Label>
-		<TextBox Grid.Row="2" Grid.Column="1" Text ="{Binding GroupId}"/>
-		<Label Grid.Row="3" Grid.Column="0">ManufacturerId</Label>
-		<TextBox Grid.Row="3" Grid.Column="1" Text ="{Binding ManufacturerId}"/>
-
-		<StackPanel Grid.Row="5" Grid.Column="1" Grid.ColumnSpan="2"
+		<Label Grid.Row="2" Grid.Column="0"> Pharmacy phone</Label>
+		<TextBox Grid.Row="2" Grid.Column="1" Text ="{Binding PharmacyPhone}"/>
+		<Label Grid.Row="3" Grid.Column="0">Pharmacy address</Label>
+		<TextBox Grid.Row="3" Grid.Column="1" Text ="{Binding PharmacyAddress}"/>
+		<Label Grid.Row="4" Grid.Column="0">Director's name</Label>
+		<TextBox Grid.Row="4" Grid.Column="1" Text ="{Binding PharmacyDirector}"/>
+		
+		<StackPanel Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
 					Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">Ok</Button>
