--- a/PharmacyCityNetwork/PharmacyCityNetwork.Client/Views/MainWindow.axaml
+++ b/PharmacyCityNetwork/PharmacyCityNetwork.Client/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:vm="using:PharmacyCityNetwork.Client.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="700" d:DesignHeight="750"
         x:Class="PharmacyCityNetwork.Client.Views.MainWindow"
         Icon="/Assets/avalonia-logo.ico"
         Title="PharmacyCityNetwork.Client">
@@ -14,24 +14,83 @@
 	<Window.Styles>
 		<StyleInclude Source="/PharmacyCityNetworkStyles.axaml"/>
 	</Window.Styles>
-	
-	<Grid Classes="MainGrid" RowDefinitions="Auto,*">
-		<StackPanel Grid.Row="0" Orientation="Horizontal">
-			<Button Classes="ToolButton" Command="{Binding	OnAddComand}">
+
+	<ScrollViewer VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+		<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,Auto,*">
+			<StackPanel Grid.Row="0" Orientation="Horizontal">
+				<Label>Products</Label>
+			</StackPanel>
+		<StackPanel Grid.Row="1" Orientation="Horizontal">
+			<Button Classes="ToolButton" Command="{Binding	OnAddCommandProduct}">
 				<Image Source="/Assets/task-add.png"/>
 			</Button>
-			<Button Classes="ToolButton">
+			<Button Classes="ToolButton" Command="{Binding	OnChangeCommandProduct}">
 				<Image Source="/Assets/task-settings.png"/>
 			</Button>
-			<Button Classes="ToolButton">
+			<Button Classes="ToolButton" Command="{Binding	OnDeleteCommandProduct}">
 				<Image Source="/Assets/task-remove.png"/>
 			</Button>
 		</StackPanel>
-		<DataGrid Grid.Row="1" AutoGenerateColumns="True"
-				  Items="{Binding Products}">
+		<DataGrid Grid.Row="3" AutoGenerateColumns="False"
+				  Items="{Binding Products}"
+				  SelectedItem="{Binding SelectedProduct}">
 			<DataGrid.Columns>
-				<DataGridTextColumn Header="Наименование" Binding="{Binding ProductName}"/>
+				<DataGridTextColumn Header="ProductName" Binding="{Binding ProductName}"/>
+				<DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+				<DataGridTextColumn Header="GroupId" Binding="{Binding GroupId}"/>
+				<DataGridTextColumn Header="ManufacturerId" Binding="{Binding ManufacturerId}"/>
 			</DataGrid.Columns>
 		</DataGrid>
-	</Grid>
+
+
+			<StackPanel Grid.Row="4" Orientation="Horizontal">
+				<Label>Groups</Label>
+			</StackPanel>
+			<StackPanel Grid.Row="5" Orientation="Horizontal">
+				<Button Classes="ToolButton" Command="{Binding	OnAddCommandGroup}">
+					<Image Source="/Assets/task-add.png"/>
+				</Button>
+				<Button Classes="ToolButton" Command="{Binding	OnChangeCommandGroup}">
+					<Image Source="/Assets/task-settings.png"/>
+				</Button>
+				<Button Classes="ToolButton" Command="{Binding	OnDeleteCommandGroup}">
+					<Image Source="/Assets/task-remove.png"/>
+				</Button>
+			</StackPanel>
+			<DataGrid Grid.Row="6" AutoGenerateColumns="False"
+					  Items="{Binding Groups}"
+					  SelectedItem="{Binding SelectedGroup}">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="GroupName" Binding="{Binding GroupName}"/>
+					<DataGridTextColumn Header="Id" Binding="{Binding Id}"/>
+				</DataGrid.Columns>
+			</DataGrid>
+
+			<StackPanel Grid.Row="7" Orientation="Horizontal">
+				<Label>Pharmacys</Label>
+			</StackPanel>
+			<StackPanel Grid.Row="8" Orientation="Horizontal">
+				<Button Classes="ToolButton" Command="{Binding	OnAddCommandPharmacy}">
+					<Image Source="/Assets/task-add.png"/>
+				</Button>
+				<Button Classes="ToolButton" Command="{Binding	OnChangeCommandPharmacy}">
+					<Image Source="/Assets/task-settings.png"/>
+				</Button>
+				<Button Classes="ToolButton" Command="{Binding	OnDeleteCommandPharmacy}">
+					<Image Source="/Assets/task-remove.png"/>
+				</Button>
+			</StackPanel>
+			<DataGrid Grid.Row="9" AutoGenerateColumns="False"
+					  Items="{Binding Pharmacys}"
+					  SelectedItem="{Binding SelectedPharmacy}">
+				<DataGrid.Columns>
+					<DataGridTextColumn Header="Pharmacy Name" Binding="{Binding PharmacyName}"/>
+					<DataGridTextColumn Header="Pharmacy id" Binding="{Binding Id}"/>
+					<DataGridTextColumn Header="Pharmacy Phone" Binding="{Binding PharmacyPhone}"/>
+					<DataGridTextColumn Header="Pharmacy Address" Binding="{Binding PharmacyAddress}"/>
+					<DataGridTextColumn Header="Pharmacy Director" Binding="{Binding PharmacyDirector}"/>
+				</DataGrid.Columns>
+			</DataGrid>
+		</Grid>
+	</ScrollViewer>
 </Window>
