--- a/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/CompanyApplicationWindow.axaml
+++ b/Recruitment/RecruitmentAgency/RecruitmentAgency.Client/Views/CompanyApplicationWindow.axaml
@@ -17,22 +17,20 @@
 		<StyleInclude Source="/RecruitmentAgencyStyles.axaml" />
 	</Window.Styles>
 
-	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto *" ColumnDefinitions="Auto,*">
+	<Grid Classes="MainGrid" RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,*" ColumnDefinitions="Auto,*">
 		<Label Grid.Row="0" Grid.Column="0" VerticalAlignment="Center">Date</Label>
 		<Label Grid.Row="1" Grid.Column="0" VerticalAlignment="Center">WorkExperience</Label>
 		<Label Grid.Row="2" Grid.Column="0" VerticalAlignment="Center">Salary</Label>
 		<Label Grid.Row="3" Grid.Column="0" VerticalAlignment="Center">Education</Label>
-		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">Id</Label>
-		<Label Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">CompanyId</Label>
-		<Label Grid.Row="6" Grid.Column="0" VerticalAlignment="Center">TitleId</Label>
+		<Label Grid.Row="4" Grid.Column="0" VerticalAlignment="Center">CompanyId</Label>
+		<Label Grid.Row="5" Grid.Column="0" VerticalAlignment="Center">TitleId</Label>
 		<TextBox Grid.Row="0" Grid.Column="1" Text="{Binding Date}"/>
 		<TextBox Grid.Row="1" Grid.Column="1" Text="{Binding WorkExperience}"/>
 		<TextBox Grid.Row="2" Grid.Column="1" Text="{Binding Salary}"/>
 		<TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Education}"/>
-		<TextBox Grid.Row="4" Grid.Column="1" Text="{Binding Id}"/>
-		<TextBox Grid.Row="5" Grid.Column="1" Text="{Binding CompanyId}"/>
-		<TextBox Grid.Row="6" Grid.Column="1" Text="{Binding TitleId}"/>
-		<StackPanel Grid.Row="7" Grid.Column="1" Grid.ColumnSpan="2"
+		<TextBox Grid.Row="4" Grid.Column="1" Text="{Binding CompanyId}"/>
+		<TextBox Grid.Row="5" Grid.Column="1" Text="{Binding TitleId}"/>
+		<StackPanel Grid.Row="6" Grid.Column="1" Grid.ColumnSpan="2"
 					HorizontalAlignment="Right"
 					Orientation="Horizontal">
 			<Button IsDefault="True" Command="{Binding OnSubmitCommand}">Accept</Button>
